Corrected both search use case and rent use case - finished my cases

--- a/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
+++ b/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
@@ -45,13 +45,13 @@
 
 \subsection{Αναζήτηση βιβλίων / χρήστη / αιτήσεων}
 
-\subsubsection*{Βασική Ροή <<Αναζήτηση βιβλίων / χρήστη / αιτήσεων>>: Αναζήτηση βιβλίων}
+\subsubsection*{Βασική Ροή <<Αναζήτηση βιβλίων / χρήστη / αιτήσεων>>: Αναζήτηση βιβλίων:}
 \begin{enumerate}
     \item Το σύστημα προσπαθεί να συνδεθεί στη βάση δεδομένων και το κάνει με επιτυχία.
         \label{Έλεγχος σύνδεσης στη βάση δεδομένων}
     \item Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "και τα δύο" (δηλαδή και από κοντά και ταχυδρομικώς) και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
         \label{Επιλογή τύπου αναζήτησης}
-    \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι υπάρχουν.
+    \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και το τύπο συναλλαγής και βλέπει ότι υπάρχουν.
         \label{Ύπαρξη βιβλίου}
     \item Το σύστημα δείχνει τη λίστα με τα διαθέσιμα βιβλία στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item Ο χρήστης επιλέγει ένα από τα βιβλία.
@@ -79,10 +79,10 @@
 
 \subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης - Αυτή υπάρχει:}
 \begin{enumerate}
-    \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις" και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
-    \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.] Το σύστημα ελέγχει αν υπάρχει αίτηση για το βιβλίο που αναζήτησε ο χρήστης και διαπιστώνει ότι υπάρχει.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.β.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.β.4.] Ο χρήστης επιλέγει ένα από τα βιβλία για τα οποία υπάρχουν αιτήσεις.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "και τα δύο", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.] Το σύστημα ελέγχει αν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης που ζήτησε ο χρήστης και διαπιστώνει ότι υπάρχει.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις που πληρούν τα κριτήρια αναζήτησης στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.4.] Ο χρήστης επιλέγει ένα από τα βιβλία.
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει αποδοχή της αίτησης.
 \end{enumerate}
 
@@ -92,10 +92,34 @@
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 6: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
+\subsubsection*{Εναλλακτική Ροή 6: Αναζήτηση βιβλίου - Μόνο από κοντά:}
+\begin{enumerate}
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "μόνο από κοντά" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Ύπαρξη βιβλίου} της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 7: Αναζήτηση βιβλίου - Μόνο ταχυδρομικώς:}
+\begin{enumerate}
+    \item[\ref{Επιλογή τύπου αναζήτησης}.δ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "μόνο ταχυδρομικώς" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.δ.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Ύπαρξη βιβλίου} της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 8: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
 \begin{enumerate}
     \item[\ref{Ύπαρξη βιβλίου}.1.] Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι υπάρχουν.
     \item[\ref{Ύπαρξη βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία που να πληρούν τα κριτήρια αναζήτησης. 
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 9: Αναζήτηση αίτησης - Μόνο από κοντά:}
+\begin{enumerate}
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.α.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "μόνο από κοντά", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.α.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 2.γ.1.2 της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 10: Αναζήτηση αίτησης - Μόνο ταχυδρομικώς:}
+\begin{enumerate}
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.β.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "μόνο ταχυδρομικώς", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.β.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 2.γ.1.2 της βασικής ροής.
 \end{enumerate}
 
 
@@ -103,12 +127,7 @@
 
 \subsubsection*{Βασική Ροή <<Ενοικίαση Βιβλίου>>: Συναλλαγή από κοντά:}
 \begin{enumerate}
-    \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα αναρτημένα βιβλία από άλλους χρήστες που προτίθενται για ενοικίαση, και διαπιστώνει ότι υπάρχουν.
-        \label{Έλεγχος ύπαρξης βιβλίου}
-    \item To σύστημα εμφανίζει τα διαθέσιμα βιβλία στον χρήστη.
-    \item Ο χρήστης επιλέγει ένα από τα βιβλία.
-    \item Το σύστημα εμφανίζει στον χρήστη πληροφορίες για τους διαθέσιμους ιδιοκτήτες που προσφέρουν το βιβλίο, διαθέσιμους τρόπους συναλλαγής (ταχυδρομικώς ή από κοντά) και την τιμή ανά μέρα.
-    \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που θέλει, επιλέγοντας συναλλαγή από κοντά.
+    \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε, επιλέγοντας συναλλαγή από κοντά.
         \label{Επιλογή τρόπου συναλλαγής}
     \item Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
         \label{Έλεγχος ποσού ασφαλείας}
@@ -126,16 +145,10 @@
         \label{Τέλος ενοικίασης}
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 1: Δεν υπάρχουν βιβλία προς ενοικίαση:}
+\subsubsection*{Εναλλακτική Ροή 1: Η συναλλαγή γίνεται ταχυδρομικώς:}
 \begin{enumerate}
-    \item[\ref{Έλεγχος ύπαρξης βιβλίου}.1.] Το σύστημα διαπιστώνει ότι δεν υπάρχουν διαθέσιμα βιβλία για τον ενοικιαστή να νοικιάσει.
-    \item[\ref{Έλεγχος ύπαρξης βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική Ροή 2: Η συναλλαγή γίνεται ταχυδρομικώς:}
-\begin{enumerate}
-    \item[\ref{Επιλογή τρόπου συναλλαγής}.1.] Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που θέλει, επιλέγοντας συναλλαγή ταχυδρομικώς.
-    \item[\ref{Επιλογή τρόπου συναλλαγής}.2.]Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
+    \item[\ref{Επιλογή τρόπου συναλλαγής}.1.] Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε, επιλέγοντας συναλλαγή ταχυδρομικώς.
+    \item[\ref{Επιλογή τρόπου συναλλαγής}.2.] Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
     \item[\ref{Επιλογή τρόπου συναλλαγής}.3.] Το σύστημα επιβεβαιώνει ότι η αίτηση ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη και ότι έχει γίνει η αποστολή.
     \item[\ref{Επιλογή τρόπου συναλλαγής}.4.] Το σύστημα εμφανίζει τα στοιχεία του ιδιοκτήτη και tracking number από την αποστολή στον ενοικιαστή και γίνεται δέσμευση του "ποσού ασφαλείας" από τον λογαριασμό του ενοικιαστή.
     \item[\ref{Επιλογή τρόπου συναλλαγής}.5.] Ο ενοικιαστής, αφού παραλάβει το βιβλίο ταχυδρομικώς, ενημερώνει το σύστημα ότι έχει κατοχή του βιβλίου (η ενημέρωση κατοχής από τον αποστολέα γίνεται αυτόματα μέσω της κατάστασης δέματος με χρήση του tracking number).
@@ -144,41 +157,39 @@
     \item[\ref{Επιλογή τρόπου συναλλαγής}.9.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Τέλος ενοικίασης} της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 3: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
+\subsubsection*{Εναλλακτική Ροή 2: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
 \begin{enumerate}
     \item[\ref{Έλεγχος ποσού ασφαλείας}\|\ref{Αποδοχή ή απόρριψη συναλλαγής}.1, \ref{Επιλογή τρόπου συναλλαγής}.2\|3.1.] Το σύστημα παρατηρεί ότι η αίτηση ενοικίασης απορρίπτεται από τον ιδιοκτήτη, ή ότι δεν έχει ο ενοικιαστής αρκετό χρηματικό ποσό στο λογαριασμό για να καλύψει το "ποσό ασφαλείας".
     \item[\ref{Έλεγχος ποσού ασφαλείας}\|\ref{Αποδοχή ή απόρριψη συναλλαγής}.2, \ref{Επιλογή τρόπου συναλλαγής}.2\|3.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι η αίτησή του απορρίφθηκε.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
+\subsubsection*{Εναλλακτική Ροή 3: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
 \begin{enumerate}
-    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.1, 5.6.1] Το σύστημα λαμβάνει ενημέρωση κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή, ή αντίστροφα.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.2, 5.6.2] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.3, 5.6.3] Το σύστημα λαμβάνει ενημέρωση κατοχής και από τον δεύτερο χρήστη.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.4, 5.6.4] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Τέλος dispute resolved - Τέλος χρημάτων} της βασικής ροής αν βρισκόταν στην αρχική ενοικίαση, και στο βήμα \ref{Τέλος ενοικίασης} αν βρισκόταν στην φάση επιστροφής του βιβλίου.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.1, 1.6.1] Το σύστημα λαμβάνει ενημέρωση κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή, ή αντίστροφα.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.2, 1.6.2] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.3, 1.6.3] Το σύστημα λαμβάνει ενημέρωση κατοχής και από τον δεύτερο χρήστη.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.4, 1.6.4] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Τέλος dispute resolved - Τέλος χρημάτων} της βασικής ροής αν βρισκόταν στην αρχική ενοικίαση, και στο βήμα \ref{Τέλος ενοικίασης} αν βρισκόταν στην φάση επιστροφής του βιβλίου.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 5: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
+\subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
-    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.3.1, 5.6.3.1] Το σύστημα δεν λαμβάνει ενημέρωση κατοχής και από τον δεύτερο χρήστη.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.3.2, 5.6.3.2]Το σύστημα ενημερώνεται από την υποστήριξη πελατών και το "ποσό ασφαλείας" αποστέλλεται στον λογαριασμό του χρήστη που αποφάσισε η υποστήριξη πελατών ότι αδικήθηκε.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.3.1, 1.6.3.1] Το σύστημα δεν λαμβάνει ενημέρωση κατοχής και από τον δεύτερο χρήστη.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}\|\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.3.2, 1.6.3.2]Το σύστημα ενημερώνεται από την υποστήριξη πελατών και το "ποσό ασφαλείας" αποστέλλεται στον λογαριασμό του χρήστη που αποφάσισε η υποστήριξη πελατών ότι αδικήθηκε.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 6: Τέλος χρημάτων ενοικιαστή - Μετέπειτα προσθήκη απαραίτητου ποσού:}
+\subsubsection*{Εναλλακτική Ροή 5: Τέλος χρημάτων ενοικιαστή - Μετέπειτα προσθήκη απαραίτητου ποσού:}
 \begin{enumerate}
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.1.] Το σύστημα αντιλαμβάνεται ότι έχουν τελειώσει τα χρήματα του ενοικιαστή.
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.2.] Το σύστημα ζητάει από τον ενοικιαστή να προσθέσει παραπάνω χρήματα στον λογαριασμό του.
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.3.] Ο ενοικιαστής προσθέτει παραπάνω χρήματα στον λογαριασμό του.
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.4.] Το σύστημα αντιλαμβάνεται ότι προστέθηκαν παραπάνω χρήματα και χρεώνει από τον ενοικιαστή το ποσό που οφείλει, μαζί με 20\% επιτόκιο.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}.5.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν} της βασικής ροής.
+    \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.5.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν} της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 7: Τέλος χρημάτων ενοικιαστή - Δεν προστίθεται το απαραίτητο ποσό:}
+\subsubsection*{Εναλλακτική Ροή 6: Τέλος χρημάτων ενοικιαστή - Δεν προστίθεται το απαραίτητο ποσό:}
 \begin{enumerate}
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.3.1.] Το σύστημα αντιλαμβάνεται μετά από ένα χρονικό διάστημα ότι ο χρήστης δεν έχει προσθέσει το ποσό που οφείλει στον λογαριασμό του.
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.3.2.] Το σύστημα προσφέρει αυτόματα το "ποσό ασφαλείας" στον ιδιοκτήτη και απενεργοποιεί τη δυνατότητα του ενοικιαστή να νοικιάσει άλλο βιβλίο, μέχρι να πληρώσει το χρωστούμενο ποσό.
 \end{enumerate}
-
-\subsection{Διαχείριση βιβλίων που προσφέρει ο χρήστης προς ενοικίαση}
 
 \end{document}
