Updated project-description description, need new mock ups to finish v0.2

--- a/1ο Παραδοτέο/Project-Description/Files/Project-description-v0.1.tex
+++ b/1ο Παραδοτέο/Project-Description/Files/Project-description-v0.1.tex
@@ -10,6 +10,7 @@
 \usepackage{float}
 \usepackage{parskip}
 \usepackage[font=small,labelfont=bf]{caption}
+\setlength{\emergencystretch}{3em}
 
 \babelprovide[import=el, main, onchar=ids fonts]{greek} % can also do import=el-polyton
 \babelprovide[import, onchar=ids fonts]{english}
@@ -42,36 +43,43 @@
 \label{Περιγραφή}
 Το προς δημιουργία project λογισμικού αποτελεί μια εφαρμογή Peer-2-Peer ενοικίασης βιβλίων. Δηλαδή η εφαρμογή αυτή επιτρέπει χρήστες να νοικιάζουν βιβλία ο ένας από τον άλλο για χρηματική ανταμοιβή, με ενσωματωμένη ασφάλεια έναντι κλοπών. Ο χρήστης σε πρώτο βήμα θα μπορεί να δημιουργεί προσωπικό λογαριασμό στην εφαρμογή, εισάγοντας το προσωπικό του email, ένα username και ένα password. Μετά τη δημιουργία του λογαριασμού του ο χρήστης θα μπορεί να εισέρχεται στην εφαρμογή εισάγοντας τα στοιχεία του. Στην εφαρμογή του δίνονται οι εξής δυνατότητες:
 
-\begin{itemize}
-	\item Θα μπορεί να νοικιάσει ένα βιβλίο από άλλους χρήστες της εφαρμογής. Κατά τη λειτουργία αυτή θα εμφανίζεται μια λίστα από διαθέσιμα βιβλία προς ενοικίαση από χρήστες κοντά του (στην ίδια πόλη με αυτόν) που κάνουν συναλλαγές πρόσωπο με πρόσωπο ή από χρήστες που μένουν μακριά αλλά δέχονται ταχυδρομικές συναλλαγές. 
+\subsection{Σύστημα ενοικιάσεων βιβλίων}
+Θα μπορεί να νοικιάσει ένα βιβλίο από άλλους χρήστες της εφαρμογής. Κατά τη λειτουργία αυτή θα του εμφανίζεται μια λίστα από διαθέσιμα βιβλία προς ενοικίαση από άλλους χρήστες της εφαρμογής. Θα υπάρχει δυνατότητα για συναλλαγή πρόσωπο με πρόσωπο, αν οι δύο χρήστες μένουν κοντά και μέσω ταχυδρομικής αποστολής, ασχέτως αν οι χρήστες μένουν κοντά ή μακριά.
 
-Έτσι αφού διαλέξει ο χρήστης το βιβλίο που θέλει, (υπάρχει και λειτουργία αναζήτησης στη λίστα) του εμφανίζεται η λίστα των χρηστών που προσφέρουν το βιβλίο αυτό για ενοικίαση. Σε αυτή τη λίστα βλέπει ο χρήστης τους τρόπους συναλλαγής που δέχεται κάθε χρήστης (ταχυδρομικώς ή πρόσωπο με πρόσωπο). Αφού επιλέξει έναν μπορεί να του κάνει "Αίτηση ενοικίασης". Έπειτα της αίτησης, ενημερώνεται ο χρήστης-ιδιοκτήτης του βιβλίου και έχει την επιλογή να δεχτεί ή να απορρίψει την αίτηση αυτή.
+Έτσι αφού ο χρήστης κάνει αναζήτηση στη πλατφόρμα και βρει το βιβλίο που θέλει, θα του εμφανίζεται η λίστα των χρηστών που προσφέρουν το βιβλίο αυτό για ενοικίαση. Σε αυτή τη λίστα βλέπει ο χρήστης τους τρόπους συναλλαγής που δέχεται κάθε χρήστης (ταχυδρομικώς ή πρόσωπο με πρόσωπο), την τιμή που ζητάει ο καθένας και το προσωπικό του "σκορ" που προκύπτει από reviews των άλλων χρηστών (θα εξηγηθεί περισσότερο παρακάτω). Αφού επιλέξει έναν μπορεί να του κάνει "Αίτηση ενοικίασης". Έπειτα της αίτησης, ενημερώνεται ο χρήστης - ιδιοκτήτης του βιβλίου και έχει την επιλογή να δεχτεί ή να απορρίψει την αίτηση αυτή.
 
-Αν τη δεχτεί, οι δύο χρήστες βλέπουν τα στοιχεία επικοινωνίας ο ένας του άλλου και αφού λάβει ο ενοικιαστής το βιβλίο ενημερώνουν οι χρήστες την εφαρμογή και χρεώνεται αυτομάτως ο ενοικιαστής ημερήσια, μέχρι το βιβλίο να επιστραφεί στον ιδιοκτήτη. 
+Αν τη δεχτεί, οι δύο χρήστες βλέπουν τα στοιχεία επικοινωνίας ο ένας του άλλου και αφού λάβει ο ενοικιαστής το βιβλίο ενημερώνουν οι χρήστες την εφαρμογή και χρεώνεται αυτομάτως ο ενοικιαστής ημερήσια, μέχρι το βιβλίο να επιστραφεί στον ιδιοκτήτη και να δηλωθεί η επιστροφή στη πλατφόρμα. 
+Αλλιώς αν η αίτηση του ενοικιαστή απορριφθεί, τότε o χρήστης - ενοικιαστής ενημερώνεται και δεν γίνεται συναλλαγή.
 
-Αλλίως αν η αίτηση του ενοικιαστή απορριφθεί, τότε αυτός ενημερώνεται και δεν γίνεται συναλλαγή.
+Επίσης ο κάθε χρήστης θα μπορεί να αναρτήσει τα βιβλία του στη πλατφόρμα, προσφέροντας τη δυνατότητα στους άλλου χρήστες να νοικιάζουν τα βιβλία του, με χρηματική ανταμοιβή που ορίζει ο ίδιος. Ο χρήστης θα μπορεί επίσης να επεξεργάζεται τη λίστα των βιβλίων που του ανήκουν και προσφέρει για ενοικίαση, προσθέτοντας και αφαιρώντας τυχόν βιβλία.
 
-	\item Ο χρήστης θα μπορεί επίσης να κάνει αναζήτηση άλλων χρηστών με βάση το username τους και να δει τα βιβλία που προσφέρουν για ενοικίαση.
+Ακόμα θα υπάρχει δυνατότητα για τους χρήστες να προβάλλουν το ιστορικό των συναλλαγών τους, μαζί με την κατάσταση των εκκρεμών συναλλαγών και αιτήσεων.
 
-	\item Οι χρήστες θα μπορούν έπειτα από μια συναλλαγή να κάνουν reviews ο ένας στον άλλο με τη μορφή 1 έως 5 αστεριών, και το συνολικό "σκορ" του κάθε χρήστη εμφανίζεται δίπλα στο προφιλ του για όλους τους υπόλοιπους χρήστες.
+Τέλος οι χρήστες θα μπορούν επίσης έπειτα από μια συναλλαγή να κάνουν reviews ο ένας στον άλλο με τη μορφή 1 έως 5 αστεριών, με προαιρετική προσθήκη σχολίου. Έτσι το συνολικό "σκορ" του κάθε χρήστη εμφανίζεται δίπλα στο όνομά του στη λίστα αναζήτησης βιβλίων και στο προφίλ του φαίνεται το σκορ μαζί με τα σχόλια στους υπόλοιπους χρήστες.
 
-	\item Ο κάθε χρήστης θα μπορεί να προβάλλει και να επεξεργάζεται τη λίστα των βιβλιών που του ανήκουν και προσφέρει για ενοικίαση.
+\subsection{Αναζήτηση άλλων χρηστών, προσθήκη αγαπημένων χρηστών και σύστημα ενημερώσεων}
+Ο χρήστης θα μπορεί επίσης να κάνει αναζήτηση άλλου χρήστη με βάση το username τους και να δει τα στοιχεία τους (username, το σκορ και τα σχόλιά του, την πόλη που μένει, ένα description που ορίζει ο ίδιος) και τα βιβλία που προσφέρει για ενοικίαση.
 
-	\item Θα υπάρχει δυνατότητα για τους χρήστες να προβάλλουν το ιστορικό των συναλλαγών τους με τους άλλους χρήστες, μαζί με την κατάσταση των εκκρεμών συναλλαγών και αιτήσεων.
+Επίσης θα υπάρχει δυνατότητα για προσθήκη των άλλων χρηστών στη λίστα "Αγαπημένων", όπου τα βιβλία που τους ανήκουν και προσφέρονται για ενοικίαση εμφανίζονται με προτεραιότητα στη λίστα των διαθέσιμων βιβλίων κατά την αναζήτηση.
 
-	\item Θα μπορεί ο κάθε χρήστης να προσθέσει και να αφαιρέσει λεφτά από τον λογαριασμό του. Η αυτόματη μεταφορά των χρημάτων μεταξύ χρηστών κατά τη διάρκεια μιας ενοικίαση γίνεται από τον λογαριασμό αυτό. Επίσης για να επιτευχθεί μια ενοικίαση μεταφέρεται ένα ποσό προκαταβολής από τον ενοικιαστή προς τον ιδιοκτήτη, με σκοπό την προστασία του ιδιοκτήτη από κλοπή.
+Επίσης το σύστημα των αγαπημένων θα συνδέεται με το σύστημα των ενημερώσεων, με το οποίο ο χρήστης ενημερώνεται από το σύστημα όταν ένας χρήστης στη λίστα αγαπημένων του προσθέτει νέο βιβλίο προς ενοικίαση στο σύστημα.
 
-	\item Ο χρήστης θα μπορεί να προβάλλει και να αλλάζει τα στοιχεία του και τον κωδικό πρόσβασής του.
+\subsection{Σύστημα αιτήσεων βιβλίων που δεν προσφέρονται ήδη στην πλατφόρμα}
+Θα υπάρχει επίσης λειτουργικότητα για τους χρήστες να δημιουργούν και να προβάλλουν "αιτήματα" για βιβλία που δεν υπάρχουν διαθέσιμα προς ενοικίαση στην πλατφόρμα, με προσφορά επιπλέον ανταμοιβής σε όποιον ιδιοκτήτη του βιβλίου αυτού το προσφέρει στον χρήστη που το ζητάει. Με αυτόν τον τρόπο διευκολύνεται η εύρεση βιβλίων που δεν είναι ήδη διαθέσιμα στη πλατφόρμα.
 
-	\item Θα υπάρχει επίσης λειτουργικότητα για τους χρήστες να δημιουργούν και να προβάλλουν "αίτηματα" για βιβλία που δεν υπάρχουν διαθέσιμα προς ενοικίαση στην πλατφόρμα, με προσφορά επιπλέον ανταμοιβής σε όποιον ιδιοκτήτη του βιβλίου αυτού το προσφέρει στον χρήστη που το ζητάει. Η ανταμοιβή δεσμεύεται μαζί με την προκαταβολή από τον ενοικιαστή κατά την συναλλαγή.
+Επίσης θα μπορεί ο χρήστης να αναζητεί, να προβάλλει και να πληρεί αιτήσεις άλλων χρηστών, εφόσον έχει το βιβλίο που ζητείται, και έτσι να κάνει αίτηση εκπλήρωσης αίτησης στον χρήστη που την έφτιαξε και να αρχικοποιηθεί συναλλαγή μαζί του.
 
-	\item Θα υπάρχει δυνατότητα για προσθήκη άλλων χρηστών στη λίστα "Αγαπημένων", όπου τα βιβλία που τους ανήκουν και προσφέρονται για ενοικίαση εμφανίζονται με προτεραιότητα στη λίστα των διαθέσιμων βιβλίων.
+\subsection{Σύστημα διαχείρισης λογαριασμών}
+Ο χρήστης θα μπορεί να προβάλλει και να αλλάζει τα στοιχεία του, δηλαδή το username, το email το, σύντομο description, τη πόλη κατοικίας, την  εικόνα χρήστη και τον κωδικό πρόσβασής του. Θα μπορεί επίσης να προσθέσει και να αφαιρέσει λεφτά από τον λογαριασμό του. 
 
-	\item Θα υπάρχει δυνατότητα επικοινωνίας με υποστήριξη πελατών με \\σκοπό την επίλυση τυχόν διαφωνιών πελατών, στην περίπτωση που κάποιος χρήστης νιώθει ότι έχει αδικηθεί, όπως για παράδειγμα αν του έχει σταλθεί ταχυδρομικώς το λάθος βιβλίο ή στη περίπτωση που ένα βιβλίο έχει υποστεί μεγάλη φυσική φθορά από έναν ενοικιαστή. 
+\subsection{Σύστημα προστασίας χρηστών από κλοπές και φθορές}
+Για την προστασία των ιδιοκτητών από κλοπές, θα γίνεται αυτόματη μεταφορά των χρημάτων μεταξύ χρηστών κατά τη διάρκεια μιας ενοικίαση. 
 
-		Η υποστήριξη πελατών λειτουργεί με βάση προκαθορισμένης πολιτικής προστασίας πελατών. Έχει σκοπό να τιμωρήσει κακόβουλες συμπεριφορές και έχει τη δυνατότητα να αποδεσμεύσει το ποσό προκαταβολής και να το χρησιμοποιήσει για να αποζημιωθούν οι χρήστες, όταν το ορίζει η πολιτική.
+Επίσης για να επιτευχθεί μια ενοικίαση δεσμεύεται ένα "ποσό ασφαλείας" από τον ενοικιαστή, με σκοπό την προστασία του ιδιοκτήτη από κλοπή ή φθορά του βιβλίου. Στην περίπτωση που η συναλλαγή ολοκληρωθεί χωρίς κανένα θέμα το ποσό αυτό ασφαλείας θα επιστρέφεται στον ενοικιαστή αυτομάτως.
 
-\end{itemize}
+Στην περίπτωση όμως διαμάχης μεταξύ ενοικιαστή και ιδιόκτητη θα υπάρχει δυνατότητα επικοινωνίας με υποστήριξη πελατών με σκοπό την επίλυση των διαφωνιών όπου είναι εφικτό. Παραδείγματα διαμαχών μπορεί να είναι η κλοπή ή φθορά του βιβλίου, όπου ο ιδιοκτήτης αποζημιώνεται μέσω του "ποσού ασφαλείας" ή θα μπορούσε να είναι η αποστολή ταχυδρομικώς του λάθους βιβλίου, όπου ο ενοικιαστής δεν χρειάζεται να πληρώσει τίποτα, και του αποδεσμεύεται αμέσως το "ποσό ασφαλείας". Και στις δύο περιπτώσεις το άτομο με κακή τιμωρείται από την πλατφόρμα με περιορισμούς στις ενοικιάσεις, και από τους ίδιους τους χρήστες μέσω των κακών σκορ.
+
+Η υποστήριξη πελατών σημειώνουμε λειτουργεί με βάση προκαθορισμένης πολιτικής προστασίας πελατών. Έχει σκοπό να τιμωρήσει κακόβουλες συμπεριφορές και έχει τη δυνατότητα να αποδεσμεύσει το ποσό προκαταβολής και να το χρησιμοποιήσει για να αποζημιωθούν οι χρήστες, μόνο όταν το ορίζει η πολιτική.
 
 \section{Mock-up Οθόνες}
 
@@ -207,5 +215,15 @@
 	\item \textbf{Νικόλαος Αυγέρης:} Peer Reviewer
 	\item \textbf{Περικλής Κοροντζής:} Peer Reviewer
 \end{enumerate}
+
+\section{Αλλαγές από έκδοση σε έκδοση}
+
+\subsection{Από έκδοση v0.1 σε έκδοση v0.2}
+\subsubsection{Αλλαγές στη περιγραφή}
+\begin{itemize}
+    \item Αναδόμηση του κειμένου της περιγραφής ώστε να είναι χωρισμένο σε τμήματα και πιο ευανάγνωστο. 
+    \item Προσθήκη του συστήματος των ειδοποιήσεων.
+    \item Προσθήκη παραπάνω διευκρινήσεων σχετικά με τη λειτουργικότητα των αιτήσεων και των αναζητήσεων.
+\end{itemize}
 
 \end{document}
