--- a/1ο Παραδοτέο/Project-Plan/Files/Project-plan-v0.1.tex
+++ b/1ο Παραδοτέο/Project-Plan/Files/Project-plan-v0.1.tex
@@ -25,7 +25,7 @@
           [Language=Default]{Liberation Sans}
 
 %Enter Title Here
- \title{Project-plan-v0.1 \\ LibShare}
+ \title{Project-plan-v0.2 \\ LibShare}
 \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree}
 
 \begin{document}
@@ -34,8 +34,8 @@
 \begin{center}
 	\LARGE{\@title} \\
 	\pagebreak
+    \begin{LARGE}\@author\end{LARGE} \\
 \end{center}
-\begin{LARGE}\@author\end{LARGE} \\
 \pagebreak
 
 %Insert Body Here
@@ -54,12 +54,12 @@
 	\label{Πίνακας Χρονοπρογραμματισμού Project}
 \end{figure}
 
-Σημειώνω επίσης ότι έχουμε χωρίσει τα tasks μεταξύ των μελών της ομάδας, για το οποίο θα αναφερθούμε παραπάνω στην ενότητα \ref{Εντότητα Gantt Chart Έργου} (συγκεκριμένα στο Σχήμα \ref{Gantt chart χρονοπρογραμματισμού των tasks}.
+Σημειώνω επίσης ότι έχουμε κάνει διαμοίραση των tasks (δηλαδή ανάθεση εργασίας) μεταξύ των μελών της ομάδας, για το οποίο θα αναφερθούμε παραπάνω στην ενότητα \ref{Ενότητα Gantt Chart Έργου} (συγκεκριμένα στο Σχήμα \ref{Gantt chart χρονοπρογραμματισμού των tasks}).
 
-Έχουμε επίσης κάνει εκτίμηση χρόνων χειρότερης περίπτωσης, καλύτερης περίπτωσης και έχουμε υπολογίσει τους χρόνους αναμενόμενης διάρκειας και τις διασπορές (Παραπάνω για αυτά στην ενότητα \ref{Ενότητα Pert Chart Έργου}, συγκεκριμένα στη Σχήμα \ref{Πίνακας Pert Data}.
+Έχουμε επίσης κάνει εκτίμηση χρόνων χειρότερης περίπτωσης, καλύτερης περίπτωσης και έχουμε υπολογίσει τους χρόνους αναμενόμενης διάρκειας και τις διασπορές (Παραπάνω για αυτά στην ενότητα \ref{Ενότητα Pert Chart Έργου}, συγκεκριμένα στη Σχήμα \ref{Πίνακας Pert Data}).
 
 \subsection{Gantt Chart Έργου}
-\label{Εντότητα Gantt Chart Έργου}
+\label{Ενότητα Gantt Chart Έργου}
 Χρησιμοποιώντας τα δεδομένα στο Σχήμα \ref{Πίνακας Χρονοπρογραμματισμού Project} φτιάξαμε Gantt chart που απεικονίζει ποιες μέρες και για πόσο μεγάλο χρονικό διάστημα θα ασχοληθούμε (δηλαδή τουλάχιστον ένα μέλος της ομάδας θα ασχοληθεί) με το κάθε Task. To Gantt chart αυτό απαρτίζει το Σχήμα \ref{Gantt chart χρονοπρογραμματισμού των tasks}
 
 \begin{figure}[H]
@@ -70,18 +70,18 @@
 
 Στην αριστερή στήλη φαίνονται τα ονόματα από τα task που αποσκοπούν σε κάθε bar του Gantt chart). Οπότε το κάθε όνομα είναι στην ίδια γραμμή με το bar που του αντιστοιχεί.
 
-Σημειώνουμε ότι στο Gantt διάγραμμα παρουσιάζουμε επίσης ποια μέλη της ομάδας ορίσαμε υπεύθυνα για την διεκπεραίωση κάθε task. Οπότε δίπλα από κάθε κάθε bar παρουσιάζεται ένα ή παραπάνω ονόματα, μαζί με ένα ποσοστό για κάθε άτομο που δείχνει το ποσοστό του χρόνου του που θα αφοσιωθεί σε αυτό το task κατά τη διάρκεια διεκπεραίωσής του. Έχουμε θεωρήσει ότι αρκούν τα τέσσερα άτομα της ομάδας για τη διεκπεραίωση του έργου, οπότε χρησιμοποιήθηκαν τα ονόματά μας απευθείας, αντί για ονόματα ομάδων ή ρόλων για παράδειγμα.
+Σημειώνουμε ότι στο Gantt διάγραμμα παρουσιάζουμε επίσης ποια μέλη της ομάδας ορίσαμε υπεύθυνα για την διεκπεραίωση κάθε task (ανάθεση έργου). Οπότε δίπλα από κάθε bar παρουσιάζεται ένα ή παραπάνω ονόματα, μαζί με ένα ποσοστό για κάθε άτομο που δείχνει το ποσοστό του χρόνου του που θα αφοσιωθεί σε αυτό το task κατά τη διάρκεια διεκπεραίωσής του. Έχουμε θεωρήσει ότι αρκούν τα τέσσερα άτομα της ομάδας για τη διεκπεραίωση του έργου, οπότε χρησιμοποιήθηκαν τα ονόματά μας απευθείας, αντί για ονόματα ομάδων ή ρόλων για παράδειγμα.
 
-Τέλος με κόκκινο χρώμα παραπάνω συμβολίζεται το κρίσιμο μονοπάτι για το Gantt chart. Αντίστοιχα με μπλέ χρώμα είναι τα μη κρίσιμα μονοπάτια. Σημειώνουμε εδώ ότι υπολογίζοντας τους χρόνους κανονικής εκτίμησης προέκυψε απευθείας ένα και μοναδικό κρίσιμο μονοπάτι, οπότε δεν χρειάστηκε να χρησιμοποιηθεί η διασπορά για την εκτίμηση για την εύρεση του κρίσιμου μονοπατιού, παρόλα αυτά έχουμε και πάλι συμπεριλάβει υπολογισμούς διασποράς και αναμενόμενης διάρκειας στο Σχήμα \ref{Πίνακας Pert Data}.
+Τέλος με κόκκινο χρώμα παραπάνω συμβολίζεται το κρίσιμο μονοπάτι για το Gantt chart. Αντίστοιχα με μπλε χρώμα είναι τα μη κρίσιμα μονοπάτια. Σημειώνουμε εδώ ότι υπολογίζοντας τους χρόνους κανονικής εκτίμησης προέκυψε απευθείας ένα και μοναδικό κρίσιμο μονοπάτι, οπότε δεν χρειάστηκε να χρησιμοποιηθεί η διασπορά για την εκτίμηση για την εύρεση του κρίσιμου μονοπατιού, παρόλα αυτά έχουμε και πάλι συμπεριλάβει υπολογισμούς διασποράς και αναμενόμενης διάρκειας στο Σχήμα \ref{Πίνακας Pert Data}.
 
 \subsection{Pert Chart Έργου}
 \label{Ενότητα Pert Chart Έργου}
 
 Χρησιμοποιώντας τα δεδομένα από το Σχήμα \ref{Πίνακας Χρονοπρογραμματισμού Project}, φτιάχνουμε Pert chart (Σχήμα \ref{Pert Chart Χρονοπρογραμματισμού Project}) που απεικονίζει τα task μαζί με τις εξαρτήσεις που προκύπτουν μεταξύ των tasks.
 
-\textbf{Σημείωση:} Αποφασίσαμε να μην δείξουμε τις ημερομηνίες, τον χρόνο κανονικής εκτίμησης και τους χρόνους χειρότερης και καλύτερης περίπτωσης πάνω στο Pert chart επειδή το σχήμα θα γινόταν πολύ μεγάλο και δυσανάγνωστο. Για αυτό το λόγο δίνουμε τα στοιχεία που θα είχαμε κανονικά στο Pert chart στο συνοδευτικό Σχήμα \ref{Πίνακας Pert Data} ακριβώς από κάτω.
+\textbf{Σημείωση:} Για να χωρέσει το σχήμα στη σελίδα αναγκαστήκαμε να το συρρικνώσουμε αρκετά, με αποτέλεσμα τα γράμματα να είναι πολύ μικρά. Παρόλα αυτά παρατηρούμε πως μέσω λειτουργίας zoom αυτά φαίνονται. Αν παρόλα αυτά επιθυμείτε να προβάλλεται τα διαγράμματα με μεγαλύτερη ανάλυση, υπάρχουν αναρτημένα στο GitHub repository (link στο Team-plan.pdf) στον φάκελο "1ο Παραδοτέο/Project-Plan/Files" σε μορφή .pptx καθώς και σε .png (screenshot). Επίσης δίνουμε τα στοιχεία του Pert chart στο συνοδευτικό πίνακα στο Σχήμα \ref{Πίνακας Pert Data} ακριβώς από κάτω, συμπληρωμένο με τιμές διακύμανσης και αναμενόμενης διάρκειας (δεν χρειάστηκαν βέβαια για να υπολογίσουμε το κρίσιμο μονοπάτι).
 
-Εδώ πάλι με κόκκινο χρώμα συμβολίζεται το κρίσιμο μονοπάτι και με μπλέ συμβολίζονται τα μη κρίσιμα μονοπάτια.
+Εδώ με κόκκινο χρώμα συμβολίζεται το κρίσιμο μονοπάτι και με μαύρο συμβολίζονται τα μη κρίσιμα μονοπάτια.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Project-Plan Pert.png}}
@@ -104,6 +104,15 @@
 Στα άμεσα κόστη θα συνυπολογίσουμε τα εξής:
 
 \subsubsection{Μισθοί}
+Αρχικά θα πρέπει να υπολογίσουμε πόσες μέρες θα εργαστεί κάθε άτομο. Με βάση το Σχήμα \ref{Gantt chart χρονοπρογραμματισμού των tasks} παραπάνω (όπου έχει γίνει η ανάθεση εργασίας) υπολογίζουμε τις εξής μέρες εργασίας:
+
+\begin{itemize}
+    \item \textbf{Γρηγόρης}:
+    \item \textbf{Χρήστος}:
+    \item \textbf{Νικόλας}:
+    \item \textbf{Περικλής}:
+\end{itemize}
+
 Εφόσον στον χρονοπρογραμματισμό παραπάνω δείχνουμε ότι κάθε άτομο δουλεύει μόνιμα και δεν υπάρχουν κενά, δεν χρειάζεται να αναλύσουμε το κόστος ανά task, ειδικά επειδή πολλές φορές μέλη της ομάδας κάνουν πολλά task ταυτόχρονα.
 
 Οπότε θα ορίσουμε ότι κάθε άτομο δουλεύει 8 ώρες την ημέρα, 5 ημέρες την εβδομάδα, με συνολικό αριθμό ημερών εργασίας να είναι ίσο με 532 (1 Μαρτίου 2023 - 13 Αυγούστου 2024 με αφαιρεμένες τα σαββατοκύριακα και τις αργίες). Επίσης θα θεωρήσουμε ωριαίο μισθό 35\euro\space ανά ώρα (μαζί με ασφάλιση). Άρα το συνολικό κόστος εργασίας για τα 4 άτομα θα είναι:
@@ -112,7 +121,7 @@ $μισθοι = μερες \cdot \frac{ωρες}{μερα} \cdot \frac{ευρω}
 
 \subsubsection{Υπόλοιπα Κόστη}
 
-Στα υπόλοιπα κόστη θα συνυπολογίσουμε κόστος για servers, διαφημίσεις, security audit από έμπιστη εταιρεία και κόστος σύμβουλων νομικών ειδικών. Αυτά τα κόστη φαίνονται παρακάτω:
+Στα υπόλοιπα κόστη θα συνυπολογίσουμε κόστος για servers, διαφημίσεις, security audit από έμπιστη εταιρεία και κόστος συμβούλων νομικών ειδικών. Αυτά τα κόστη φαίνονται παρακάτω:
 
 \begin{itemize}
 	\item \textbf{Servers:} 1400\euro
@@ -167,4 +176,16 @@ $Συνολο = 595840 + 1400 + 6000 + 1500 + 1500 + 10800 + 1800 + 720 + 900 \a
 	\item \textbf{Νικόλαος Αυγέρης:} Peer Reviewer
 	\item \textbf{Περικλής Κοροντζής:} Peer Reviewer
 \end{enumerate}
+
+\section{Αλλαγές από έκδοση σε έκδοση}
+
+\subsection{Από έκδοση v0.1 σε έκδοση v0.2}
+\begin{itemize}
+    \item Αλλαγή του χρονοπρογραμματισμού και της ανάθεσης εργασίας ώστε να αποσκοπούν παραπάνω αυτό που έγινε στη πραγματικότητα.
+    \item Ανανέωση του Gantt chart ώστε να είναι πιο ευδιάκριτες οι ημερομηνίες.
+    \item Ανανέωση του Pert ώστε να περιέχει τα στοιχεία, εφόσον ενημερωθήκαμε πως δεν ήταν επαρκής ο συνοδευτικός πίνακας του v0.1.
+    \item Προσθήκη της Τρίτης ως μέρας συναντήσεων
+    \item Προσθήκη του Microsoft PowerPoint και Figma στα εργαλεία που χρησιμοποιούμε.
+\end{itemize}
+
 \end{document}
