--- a/1ο Παραδοτέο/Team-Plan/Files/Team-plan-v0.1.tex
+++ b/1ο Παραδοτέο/Team-Plan/Files/Team-plan-v0.1.tex
@@ -26,8 +26,8 @@
           [Language=Default]{Liberation Sans}
 
 %Enter Title Here
- \title{Team-plan-v0.1 \\ LibShare}
- \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree\\ \\ \href{https://github.com/GregKapadoukas/University-Software-Engineering-Project}{\color{blue}GitHub Link}}
+ \title{Team-plan-v0.2 \\ LibShare}
+ \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree\\ \href{https://github.com/GregKapadoukas/University-Software-Engineering-Project}{\color{blue}GitHub Link}}
 
 \begin{document}
 
@@ -35,15 +35,15 @@
 \begin{center}
 	\LARGE{\@title} \\
 	\pagebreak
-\end{center}
-\begin{LARGE}\@author\end{LARGE} \\
+    \begin{LARGE}\@author\end{LARGE}
 \pagebreak
+\end{center}
 
 %Insert Body Here
 \section{Χρονοπρογραμματισμός του project}
 Με σκοπό τον χρονοπρογραμματισμό του project και την εκτίμηση της εργασίας που θα κάνουμε ως ομάδα, έχουμε αρχικά χωρίσει το project σε επιμέρους tasks.
 
-Επίσης έχουμε έχουμε ορίσει τις ημερομηνίες και τη διάρκεια σε μέρες που θα ασχοληθούμε με το κάθε task (ημερομηνία τέλους - ημερομηνία έναρξης = χρόνος κανονικής εκτίμησης). Ακόμα έχουμε υπολογίσει εξαρτήσεις μεταξύ των task, με τη μορφή του immediate predecessor.
+Επίσης έχουμε ορίσει τις ημερομηνίες και τη διάρκεια σε μέρες που θα ασχοληθούμε με το κάθε task (ημερομηνία τέλους - ημερομηνία έναρξης = χρόνος κανονικής εκτίμησης). Ακόμα έχουμε υπολογίσει εξαρτήσεις μεταξύ των task, με τη μορφή του immediate predecessor.
 
 Οι πληροφορίες αυτές που εκτιμήσαμε και αναφέρονται παραπάνω, παρουσιάζονται στον πίνακα στο Σχήμα \ref{Πίνακας Χρονοπρογραμματισμού Project}.
 
@@ -53,9 +53,9 @@
 	\label{Πίνακας Χρονοπρογραμματισμού Project}
 \end{figure}
 
-Σημειώνω ότι έχουμε κάνει και εκτιμήσεις για χρόνους χειρότερης και καλύτερης περίπτωσης, τους οποίους με συνδυασμό με τους χρόνους κανονικής εκτίμησης χρησιμοποιούμε για να υπολογίσουμε τον μέσο χρόνο (αναμενόμενη διάρκεια) και τη διασπορά για κάθε task. Παραπάνω για τις εκτιμήσεις και τους υπολογισμόυς αυτούς στην ενότητα \ref{Ενότητα Pert Chart} (συγκεκριμένα στο Σχήμα \ref{Πίνακας Pert Data}).
+Σημειώνω ότι έχουμε κάνει και εκτιμήσεις για χρόνους χειρότερης και καλύτερης περίπτωσης, τους οποίους με συνδυασμό με τους χρόνους κανονικής εκτίμησης χρησιμοποιούμε για να υπολογίσουμε τον μέσο χρόνο (αναμενόμενη διάρκεια) και τη διασπορά για κάθε task. Παραπάνω για τις εκτιμήσεις και τους υπολογισμούς αυτούς στην ενότητα \ref{Ενότητα Pert Chart} (συγκεκριμένα στο Σχήμα \ref{Πίνακας Pert Data}).
 
-Τέλος σημειώνω ότι έχει γίνει και ανάθεση εργασίας στα μέλη της ομάδας η οποία παρουσιάζεται στην ενότητα ref{Ενότητα Gantt Chart} (πιο συγκεκριμένα στο Σχήμα \ref{Gantt Chart Χρονοπρογραμματισμού Project}).
+Τέλος σημειώνω ότι έχει γίνει και ανάθεση εργασίας στα μέλη της ομάδας η οποία παρουσιάζεται στην ενότητα \ref{Ενότητα Gantt Chart} (πιο συγκεκριμένα στο Σχήμα \ref{Gantt Chart Χρονοπρογραμματισμού Project}).
 
 \subsection{Gantt chart}
 \label{Ενότητα Gantt Chart}
@@ -67,20 +67,20 @@
 	\label{Gantt Chart Χρονοπρογραμματισμού Project}
 \end{figure}
 
-Στην αριστερή στήλη φαίνονται τα ονόματα από τα task που αποσκοπούν σε κάθε bar του Gantt chart). Οπότε το κάθε όνομα είναι στην ίδια γραμμή με το bar που του αντιστοιχεί.
+Στην αριστερή στήλη φαίνονται τα ονόματα από τα task που αποσκοπούν σε κάθε bar του Gantt chart. Οπότε το κάθε όνομα είναι στην ίδια γραμμή με το bar που του αντιστοιχεί.
 
-Σημειώνουμε ότι στο Gantt διάγραμμα παρουσιάζουμε επίσης ποια μέλη της ομάδας ορίσαμε υπεύθυνα για την διεκπεραίωση κάθε task. Οπότε δίπλα από κάθε κάθε bar παρουσιάζεται ένα ή παραπάνω ονόματα, μαζί με ένα ποσοστό για κάθε άτομο που δείχνει το ποσοστό του χρόνου του που θα αφοσιωθεί σε αυτό το task κατά τη διάρκεια διεκπεραίωσής του.
+Σημειώνουμε ότι στο Gantt διάγραμμα παρουσιάζουμε επίσης ποια μέλη της ομάδας ορίσαμε υπεύθυνα για την διεκπεραίωση κάθε task (ανάθεση εργασίας). Οπότε δίπλα από κάθε bar παρουσιάζεται ένα ή παραπάνω ονόματα, μαζί με ένα ποσοστό για κάθε άτομο που δείχνει το ποσοστό του χρόνου του που θα αφοσιωθεί σε αυτό το task κατά τη διάρκεια διεκπεραίωσής του.
 
-Τέλος με κόκκινο χρώμα παραπάνω συμβολίζεται το κρίσιμο μονοπάτι για το Gantt chart. Αντίστοιχα με μπλέ χρώμα είναι τα μη κρίσιμα μονοπάτια. Σημειώνουμε εδώ ότι υπολογίζοντας τους χρόνους κανονικής εκτίμησης προέκυψε απευθείας ένα και μοναδικό κρίσιμο μονοπάτι, οπότε δεν χρειάστηκε να χρησιμοποιηθεί η διασπορά για την εκτίμηση για την εύρεση του κρίσιμου μονοπατιού, παρόλα αυτά έχουμε και πάλι συμπεριλάβει υπολογισμούς διασποράς και αναμενόμενης διάρκειας στο Σχήμα \ref{Πίνακας Pert Data}.
+Τέλος με κόκκινο χρώμα παραπάνω συμβολίζεται το κρίσιμο μονοπάτι για το Gantt chart. Αντίστοιχα με μπλε χρώμα είναι τα μη κρίσιμα μονοπάτια. Σημειώνουμε εδώ ότι υπολογίζοντας τους χρόνους κανονικής εκτίμησης προέκυψε απευθείας ένα και μοναδικό κρίσιμο μονοπάτι, οπότε δεν χρειάστηκε να χρησιμοποιηθεί η διασπορά για την εκτίμηση για την εύρεση του κρίσιμου μονοπατιού, παρόλα αυτά έχουμε και πάλι συμπεριλάβει υπολογισμούς διασποράς και αναμενόμενης διάρκειας στο Σχήμα \ref{Πίνακας Pert Data}.
 
 
 \subsection{Pert chart}
 \label{Ενότητα Pert Chart}
 Χρησιμοποιώντας τα δεδομένα από το Σχήμα \ref{Πίνακας Χρονοπρογραμματισμού Project}, φτιάχνουμε Pert chart (Σχήμα \ref{Pert Chart Χρονοπρογραμματισμού Project}) που απεικονίζει τα task μαζί με τις εξαρτήσεις που προκύπτουν μεταξύ των tasks.
 
-\textbf{Σημείωση:} Αποφασίσαμε να μην δείξουμε τις ημερομηνίες, τον χρόνο κανονικής εκτίμησης και τους χρόνους χειρότερης και καλύτερης περίπτωσης πάνω στο Pert chart επειδή το σχήμα θα γινόταν πολύ μεγάλο και δυσανάγνωστο. Για αυτό το λόγο δίνουμε τα στοιχεία που θα είχαμε κανονικά στο Pert chart στο συνοδευτικό Σχήμα \ref{Πίνακας Pert Data} ακριβώς από κάτω.
+\textbf{Σημείωση:} Για να χωρέσει το σχήμα στη σελίδα αναγκαστήκαμε να το συρρικνώσουμε αρκετά, με αποτέλεσμα τα γράμματα να είναι πολύ μικρά. Παρόλα αυτά παρατηρούμε πως μέσω λειτουργίας zoom αυτά φαίνονται. Αν παρόλα αυτά επιθυμείτε να προβάλλεται τα διαγράμματα με μεγαλύτερη ανάλυση, υπάρχουν αναρτημένα στο GitHub repository στον φάκελο "1ο Παραδοτέο/Team-Plan/Files" σε μορφή .pptx καθώς και σε .png (screenshot). Επίσης δίνουμε τα στοιχεία του Pert chart στο συνοδευτικό πίνακα στο Σχήμα \ref{Πίνακας Pert Data} ακριβώς από κάτω, συμπληρωμένο με τιμές διακύμανσης και αναμενόμενης διάρκειας (δεν χρειάστηκαν βέβαια για να υπολογίσουμε το κρίσιμο μονοπάτι).
 
-Εδώ πάλι με κόκκινο χρώμα συμβολίζεται το κρίσιμο μονοπάτι και με μπλέ συμβολίζονται τα μη κρίσιμα μονοπάτια.
+Εδώ με κόκκινο χρώμα συμβολίζεται το κρίσιμο μονοπάτι και με μαύρο συμβολίζονται τα μη κρίσιμα μονοπάτια.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Team-Plan Pert.png}}
@@ -100,13 +100,13 @@
 \subsection{Μέθοδος Οργάνωσης}
 Κατά τον χρονοπρογραμματισμό της εργασίας προσέξαμε ότι, μέσω της ανάθεσης της δουλειάς που παρουσιάζουμε στο Σχήμα \ref{Gantt Chart Χρονοπρογραμματισμού Project}, έχουμε γενικά μια καλή γνώση της εργασίας που θα πρέπει να κάνει το κάθε μέλος σε κάθε χρονική στιγμή. 
 
-Παρόλα αυτά όμως, μερικά tasks όπως αυτά που αποσκοπούν στη συγγραφή κώδικα, είναι πολύ high level και θα είναι ιδανικό να υποδιαιρεθούν σε επιμέρους υπο-tasks. Αποφασίσαμε λοιπόν ότι για την υλοποίηση αυτών των tasks θα χρησιμοποιήσουμε προσαρμοσμένη μέθοδο Scrum.
+Παρόλα αυτά όμως, μερικά tasks όπως αυτά που αποσκοπούν στη συγγραφή κώδικα, είναι πολύ high level και θα είναι ιδανικό να υποδιαιρεθούν σε επιμέρους υπό tasks. Αποφασίσαμε λοιπόν ότι για την υλοποίηση αυτών των tasks θα χρησιμοποιήσουμε προσαρμοσμένη μέθοδο Scrum.
 
-Με αυτόν τον τρόπο κάθε task που αποσκοπεί σε συγγραφή κώδικα, ανατίθεται σε ένα sprint που θα υλοποιείται αντίστοιχα από τα άτομα που το έχουν αναλάβει στο Σχήμα \ref{Gantt Chart Χρονοπρογραμματισμού Project}. Έτσι μπορούμε να χωριζόμαστε σε υπό ομάδες και μπορούμε να έχουμε πολλαπλά sprints σε εξέλιξη ταυτόχρονα, στις περιπτώσης που αυτό βγάζει νόημα (πχ υλοποίηση βάσης και user interface μαζί).
+Με αυτόν τον τρόπο κάθε task που αποσκοπεί σε συγγραφή κώδικα, ανατίθεται σε ένα sprint που θα υλοποιείται αντίστοιχα από τα άτομα που το έχουν αναλάβει στο Σχήμα \ref{Gantt Chart Χρονοπρογραμματισμού Project}. Έτσι μπορούμε να χωριζόμαστε σε υπό ομάδες και μπορούμε να έχουμε πολλαπλά sprints σε εξέλιξη ταυτόχρονα, στις περιπτώσεις που αυτό βγάζει νόημα (πχ υλοποίηση βάσης και user interface μαζί).
 
-Βέβαια θα υπάρχει επικοινωνία μεταξύ των υπο ομάδων και του Scrum Master που θα συντονίζει τις ομάδες και είναι υπεύθυνος για τον σχεδιασμό κάθε sprint cycle και των product backlog, με σκοπό την μετέπειτα ομαλή διασύνδεση της δουλειάς μεταξύ ομάδων ή/και με τη προηγούμενη δουλειά. Ο Scrum Master θεωρείται επίσης μέλος των ομάδων και γράφει κώδικα, όπως τα υπόλοιπα μέλη.
+Βέβαια θα υπάρχει επικοινωνία μεταξύ των υπό ομάδων και του Scrum Master που θα συντονίζει τις ομάδες και είναι υπεύθυνος για τον σχεδιασμό κάθε sprint cycle και των product backlog, με σκοπό την μετέπειτα ομαλή διασύνδεση της δουλειάς μεταξύ ομάδων ή/και με τη προηγούμενη δουλειά. Ο Scrum Master θεωρείται επίσης μέλος των ομάδων και γράφει κώδικα, όπως τα υπόλοιπα μέλη.
 
-Έχουμε επιπλέον ορίσει εβδομαδιαίο Scrum meeting εξ αποστάσεως κάθε Πέμπτη στις 8:30 μμ. Με το meeting αυτό επιθυμούμε να κρατάμε επαφή, να επιλύουμε απορίες και να ανταλλάσσουμε ιδέες πάνω σε αυτά που ασχολούμαστε. Έχουμε επίσης ορίσει εναλλακτική μέρα συνάντησης στην έκτακτη περίπτωση που κάποιο μέλος δεν μπορεί το Σάββατο στις 3 μμ. Τέλος υπολογίζουμε το ενδεχόμενο να προσθέσουμε παραπάνω συναντήσεις στη βδομάδα αν αυτό απαιτείται.
+Έχουμε επιπλέον ορίσει εβδομαδιαίο Scrum meeting εξ αποστάσεως κάθε Πέμπτη στις 8:30 μμ. Με το meeting αυτό επιθυμούμε να κρατάμε επαφή, να επιλύουμε απορίες και να ανταλλάσσουμε ιδέες πάνω σε αυτά που ασχολούμαστε. Έχουμε επίσης ορίσει εναλλακτικές / επιπρόσθετες μέρες συνάντησης στην έκτακτη περίπτωση που κάποιο μέλος δεν μπορεί να προσέλθει την Πέμπτη ή που κρίνουμε ότι χρειαζόμαστε πάνω από ένα meeting, να είναι το Σάββατο στις 3 μμ ή / και τη Δευτέρα στις 9:30 μμ. Τέλος υπολογίζουμε το ενδεχόμενο να προσθέσουμε ακόμα παραπάνω συναντήσεις στη βδομάδα αν αυτό απαιτείται.
 
 \subsection{Ρόλοι Μελών Ομάδας}
 
@@ -130,7 +130,7 @@
 Το περιβάλλον ανάπτυξης λογισμικού που θα χρησιμοποιηθεί κατά κόρον είναι το Visual Studio Code της Microsoft, αν και τα μέλη της ομάδας θα έχουν την ευχέρεια να χρησιμοποιήσουν άλλα εργαλεία αν θέλουν όπως PyCharm και Neovim, με την προϋπόθεση ότι ο τελικός κώδικας θα ελέγχεται να λειτουργεί και σε VS Code.
 
 \subsection{Σχεδιασμός Σχημάτων, Mock-up Screens και Charts}
-Θα χρησιμοποιηθεί ένας συνδυασμός από εργαλεία, όπως Paint, Paint.net, Microsoft Excel, Microsoft Project, Visual Paradigm, Gimp κ.α. επειδή τα μέλη της ομάδας έχουν διαφορετικό βαθμό εξοικείωσης με διάφορα εργαλεία που θέλουμε να αξιοποιήσουμε. Προϋπόθεση πάντα βέβαια της χρήσης ενός εργαλείου είναι να υπάρχει μια ομοιομορφία με τα υπόλοιπα σχήματα και γραφήματα που έχουν ήδη χρησιμοποιηθεί.
+Θα χρησιμοποιηθεί ένας συνδυασμός από εργαλεία, όπως Paint, Paint.net, Microsoft Excel, Microsoft Project, Microsoft PowerPoint, Visual Paradigm, Gimp, Figma κ.α. Επειδή τα μέλη της ομάδας έχουν διαφορετικό βαθμό εξοικείωσης με διάφορα εργαλεία που θέλουμε να αξιοποιήσουμε. Προϋπόθεση πάντα βέβαια της χρήσης ενός εργαλείου είναι να υπάρχει μια ομοιομορφία με τα υπόλοιπα σχήματα και γραφήματα που έχουν ήδη χρησιμοποιηθεί.
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 \begin{enumerate}
@@ -139,5 +139,16 @@
 	\item \textbf{Νικόλαος Αυγέρης:} Peer Reviewer
 	\item \textbf{Περικλής Κοροντζής:} Peer Reviewer
 \end{enumerate}
+
+\section{Αλλαγές από έκδοση σε έκδοση}
+
+\subsection{Από έκδοση v0.1 σε έκδοση v0.2}
+\begin{itemize}
+    \item Αλλαγή του χρονοπρογραμματισμού και της ανάθεσης εργασίας ώστε να αποσκοπούν παραπάνω αυτό που έγινε στη πραγματικότητα.
+    \item Ανανέωση του Gantt chart ώστε να είναι πιο ευδιάκριτες οι ημερομηνίες.
+    \item Ανανέωση του Pert ώστε να περιέχει τα στοιχεία, εφόσον ενημερωθήκαμε πως δεν ήταν επαρκής ο συνοδευτικός πίνακας του v0.1.
+    \item Προσθήκη της Τρίτης ως μέρας συναντήσεων
+    \item Προσθήκη του Microsoft PowerPoint και Figma στα εργαλεία που χρησιμοποιούμε.
+\end{itemize}
 
 \end{document}
