Corrected cost estimation in Project-plan

--- a/1ο Παραδοτέο/Project-Plan/v0.2/Files/Project-plan-v0.2.tex
+++ b/1ο Παραδοτέο/Project-Plan/v0.2/Files/Project-plan-v0.2.tex
@@ -104,29 +104,27 @@
 Στα άμεσα κόστη θα συνυπολογίσουμε τα εξής:
 
 \subsubsection{Μισθοί}
-Αρχικά θα πρέπει να υπολογίσουμε πόσες μέρες θα εργαστεί κάθε άτομο. Με βάση το Σχήμα \ref{Gantt chart χρονοπρογραμματισμού των tasks} παραπάνω (όπου έχει γίνει η ανάθεση εργασίας) υπολογίζουμε τις εξής μέρες εργασίας:
+Αρχικά θα πρέπει να υπολογίσουμε πόσες μέρες θα εργαστεί κάθε άτομο. Με βάση το Σχήμα \ref{Gantt chart χρονοπρογραμματισμού των tasks} παραπάνω (όπου έχει γίνει η ανάθεση εργασίας) και δεδομένου ότι ο συνολικός χρόνος εκπλήρωσης του έργου (δηλαδή το άθροισμα των ημερών κανονικής εκτίμησης των task στο κρίσιμο μονοπάτι) είναι 353 ημέρες (έχουν αφαιρεθεί σαββατοκύριακα και αργίες), υπολογίζουμε τις εξής συνολικές μέρες εργασίας:
 
 \begin{itemize}
-    \item \textbf{Γρηγόρης}:
-    \item \textbf{Χρήστος}:
-    \item \textbf{Νικόλας}:
-    \item \textbf{Περικλής}:
+    \item \textbf{Γρηγόρης}: 348 από τις 353 ημέρες
+    \item \textbf{Χρήστος}: 348 από τις 353 ημέρες
+    \item \textbf{Νικόλας}: 331 από τις 353 ημέρες
+    \item \textbf{Περικλής} :331 από τις 353 ημέρες
 \end{itemize}
 
-Εφόσον στον χρονοπρογραμματισμό παραπάνω δείχνουμε ότι κάθε άτομο δουλεύει μόνιμα και δεν υπάρχουν κενά, δεν χρειάζεται να αναλύσουμε το κόστος ανά task, ειδικά επειδή πολλές φορές μέλη της ομάδας κάνουν πολλά task ταυτόχρονα.
+Επίσης θα θεωρήσουμε ότι κάθε άτομο δουλεύει 8 ώρες την ημέρα, χωρίς υπερωρίες, και με ωριαίο μισθό 35\euro\space ανά ώρα (μαζί με ασφάλιση). Άρα το συνολικό κόστος εργασίας για τα 4 άτομα θα είναι:
 
-Οπότε θα ορίσουμε ότι κάθε άτομο δουλεύει 8 ώρες την ημέρα, 5 ημέρες την εβδομάδα, με συνολικό αριθμό ημερών εργασίας να είναι ίσο με 532 (1 Μαρτίου 2023 - 13 Αυγούστου 2024 με αφαιρεμένες τα σαββατοκύριακα και τις αργίες). Επίσης θα θεωρήσουμε ωριαίο μισθό 35\euro\space ανά ώρα (μαζί με ασφάλιση). Άρα το συνολικό κόστος εργασίας για τα 4 άτομα θα είναι:
-
-$μισθοι = μερες \cdot \frac{ωρες}{μερα} \cdot \frac{ευρω}{ωρα} \cdot ατομα = 532 * 8 * 35 * 4 = 595840\euro$
+$μισθοι = ανθρωπομέρες \cdot \frac{ωρες}{μερα} \cdot \frac{ευρω}{ωρα} = (348 + 348 + 331 + 331) * 8 * 35 = 352240\euro$
 
 \subsubsection{Υπόλοιπα Κόστη}
 
 Στα υπόλοιπα κόστη θα συνυπολογίσουμε κόστος για servers, διαφημίσεις, security audit από έμπιστη εταιρεία και κόστος συμβούλων νομικών ειδικών. Αυτά τα κόστη φαίνονται παρακάτω:
 
 \begin{itemize}
-	\item \textbf{Servers:} 1400\euro
+	\item \textbf{Servers:} 1200\euro
 
-		Υποθέτουμε ότι μέχρι την δημοσίευση της εφαρμογής έχουμε νοικιάσει servers για συνολικά 14 μήνες (από τέλη Ιουνίου 2023 μέχρι αρχές Αυγούστου 2024), οπότε θεωρώντας κόστος 100\euro\space ανά μήνα το συνολικό κόστος είναι 1400\euro.
+		Υποθέτουμε ότι μέχρι την δημοσίευση της εφαρμογής έχουμε νοικιάσει servers για συνολικά 12 μήνες (από τέλη Ιουνίου 2023 μέχρι τέλη Ιουνίου 2024), οπότε θεωρώντας κόστος 100\euro\space ανά μήνα το συνολικό κόστος είναι 1200\euro.
 
 	\item \textbf{Διαφημίσεις:} 6000\euro
 
@@ -146,28 +144,28 @@ $μισθοι = μερες \cdot \frac{ωρες}{μερα} \cdot \frac{ευρω}
 Θεωρούμε ότι νοικιάζουμε γραφείο για την ομάδα από όπου θα εκπονούμε τη δουλειά. Οπότε για έμμεσα κόστος θα έχουμε το νοίκι, το ρεύμα, το νερό, τα κοινόχρηστα και τη βενζίνη για μετακίνηση στο γραφείο. Τα κόστη αυτά αναλύονται παρακάτω:
 
 \begin{itemize}
-	\item \textbf{Νοίκι:} 10800\euro
+	\item \textbf{Νοίκι:} 9600\euro
 
-		Υποθέτουμε ότι το νοίκι είναι 600\euro\space ανά μήνα και ότι το νοικιάζουμε για 18 μήνες μέχρι την δημοσίευση του έργου. Άρα συνολικά 10800\euro.
+		Υποθέτουμε ότι το νοίκι είναι 600\euro\space ανά μήνα και ότι το νοικιάζουμε για 16 μήνες μέχρι την δημοσίευση του έργου. Άρα συνολικά 9600\euro.
 
-	\item \textbf{Ρεύμα:} 1800\euro
+	\item \textbf{Ρεύμα:} 1600\euro
 
-		Υποθέτουμε ότι το ρεύμα είναι 100\euro\space ανά μήνα και ότι το νοικιάζουμε για 18 μήνες μέχρι την δημοσίευση του έργου. Άρα συνολικά 1800\euro.
+		Υποθέτουμε ότι το ρεύμα είναι 100\euro\space ανά μήνα και ότι το νοικιάζουμε για 16 μήνες μέχρι την δημοσίευση του έργου. Άρα συνολικά 1600\euro.
 
-	\item \textbf{Νερό:} 720\euro
+	\item \textbf{Νερό:} 640\euro
 
-		Υποθέτουμε ότι το νερό είναι 40\euro\space ανά μήνα και ότι το νοικιάζουμε για 18 μήνες μέχρι την δημοσίευση του έργου. Άρα συνολικά 720\euro.
+		Υποθέτουμε ότι το νερό είναι 40\euro\space ανά μήνα και ότι το νοικιάζουμε για 16 μήνες μέχρι την δημοσίευση του έργου. Άρα συνολικά 640\euro.
 
-	\item \textbf{Κοινόχρηστα:} 900\euro
+	\item \textbf{Κοινόχρηστα:} 800\euro
 
-		Υποθέτουμε ότι τα κοινόχρηστα είναι 50\euro\space ανά μήνα και ότι το νοικιάζουμε για 18 μήνες μέχρι την δημοσίευση του έργου. Άρα συνολικά 900\euro.
+		Υποθέτουμε ότι τα κοινόχρηστα είναι 50\euro\space ανά μήνα και ότι το νοικιάζουμε για 16 μήνες μέχρι την δημοσίευση του έργου. Άρα συνολικά 800\euro.
 \end{itemize}
 
 \subsection{Συνολική εκτίμηση κόστους}
 
 Από τα άμεσα κόστη του κεφαλαίο 3.1 και τα έμμεσα κόστη του κεφαλαίου 3.2 έχουμε το εξής συνολικό κόστος:
 
-$Συνολο = 595840 + 1400 + 6000 + 1500 + 1500 + 10800 + 1800 + 720 + 900 \approx 620500\euro$
+$Συνολο = 352240 + 1200 + 6000 + 1500 + 1500 + 9600 + 1600 + 640 + 800 \approx 375000\euro$
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 \begin{enumerate}
@@ -181,11 +179,9 @@ $Συνολο = 595840 + 1400 + 6000 + 1500 + 1500 + 10800 + 1800 + 720 + 900 \a
 
 \subsection{Από έκδοση v0.1 σε έκδοση v0.2}
 \begin{itemize}
-    \item Αλλαγή του χρονοπρογραμματισμού και της ανάθεσης εργασίας ώστε να αποσκοπούν παραπάνω αυτό που έγινε στη πραγματικότητα.
     \item Ανανέωση του Gantt chart ώστε να είναι πιο ευδιάκριτες οι ημερομηνίες.
     \item Ανανέωση του Pert ώστε να περιέχει τα στοιχεία, εφόσον ενημερωθήκαμε πως δεν ήταν επαρκής ο συνοδευτικός πίνακας του v0.1.
-    \item Προσθήκη της Τρίτης ως μέρας συναντήσεων
-    \item Προσθήκη του Microsoft PowerPoint και Figma στα εργαλεία που χρησιμοποιούμε.
+    \item Διόρθωση στον υπολογισμό κόστους (κυρίως των μισθών).
 \end{itemize}
 
 \end{document}
