Added Use Case Diagram to use-cases document

--- a/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
+++ b/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
@@ -41,7 +41,19 @@
 %Insert Body Here
 \section{Use Case Diagram}
 
+Το Use Case Diagram που φτιάξαμε αποτελεί το Σχήμα \ref{Use Case Diagram}. Για την καλύτερη και πιο λεπτομερή σχεδίαση, πολλά use cases τα οποία αποτελούν ένα use case παρακάτω στο κεφάλαιο \ref{Ροές των Use Cases}, εδώ έχουν αποτελέσει περισσότερα από ένα με σκοπό την καλύτερη ανάλυση της αλληλεπίδρασης μεταξύ των use cases.
+
+Έτσι για παράδειγμα, το use case της "Αναζήτησης βιβλίων / χρήστη, αιτήσεων" στο κεφάλαιο \ref{Ροές των Use Cases} εδώ χωρίζεται σε "Αναζήτηση", "Αναζήτηση βιβλίου", "Αναζήτηση χρήστη" και "Αναζήτηση αίτησης", με σχέση γενίκευσης των τριών τελευταίων από το πρώτο. Επίσης τα use cases με σχέση extends μπορούν στο κεφάλαιο \ref{Ροές των Use Cases} να αναπαρασταθούν σε ένα use case, με ένδειξη της επιπλέον λειτουργικότητας σε εναλλακτική ροή. Με αυτόν τον τρόπο προσπαθούμε να αποφύγουνε να αναλύσουμε τετριμμένα use cases.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Use-case Diagram.png}}
+	\caption{Use Case Diagram}
+	\label{Use Case Diagram}
+\end{figure}
+
+
 \section{Ροές των Use Cases}
+\label{Ροές των Use Cases}
 
 \subsection{Αναζήτηση βιβλίων / χρήστη / αιτήσεων}
 
