Added My Requests use case from Xristos

--- a/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
+++ b/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
@@ -137,7 +137,7 @@
 
 \subsection{Ενοικίαση βιβλίου από άλλο χρήστη}
 
-\subsubsection*{Βασική Ροή <<Ενοικίαση Βιβλίου>>: Συναλλαγή από κοντά:}
+\subsubsection*{Βασική Ροή <<Ενοικίαση βιβλίου από άλλο χρήστη>>: Συναλλαγή από κοντά:}
 \begin{enumerate}
     \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε, επιλέγοντας συναλλαγή από κοντά.
         \label{Επιλογή τρόπου συναλλαγής}
@@ -202,6 +202,61 @@
 \begin{enumerate}
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.3.1.] Το σύστημα αντιλαμβάνεται μετά από ένα χρονικό διάστημα ότι ο χρήστης δεν έχει προσθέσει το ποσό που οφείλει στον λογαριασμό του.
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.3.2.] Το σύστημα προσφέρει αυτόματα το "ποσό ασφαλείας" στον ιδιοκτήτη και απενεργοποιεί τη δυνατότητα του ενοικιαστή να νοικιάσει άλλο βιβλίο, μέχρι να πληρώσει το χρωστούμενο ποσό.
+\end{enumerate}
+
+\subsection{Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
+
+\subsubsection*{Βασική ροή <<Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης>>: Προσθήκη νέου αιτήματος:}
+\begin{enumerate}
+    \item Ο χρήστης επιλέγει να δει τη λίστα με τα αιτήματά του.
+    \item Στον χρήστη εμφανίζεται η οθόνη με τα ήδη υπάρχοντα αιτήματά του μαζί με στοιχεία του καθενός από αυτά.
+    \item Ο χρήστης πατάει την επιλογή προσθήκης καινούριου αιτήματος.
+    \item Ο χρήστης εισάγει τα στοιχεία του βιβλίου τα οποία θέλει να αποκτήσει, προσθέτοντας την τιμή που προτίθεται να πληρώσει.
+    \item Το σύστημα αναζητά αν αυτό το βιβλίο υπάρχει ήδη διαθέσιμο από κάποιον άλλο χρήστη που το προσφέρει ήδη στην πλατφόρμα.
+    \item Το σύστημα προχωράει στην καταχώρηση του αιτήματος.
+    \item Εμφανίζεται μήνυμα που γράφει “Επιτυχής καταχώρηση αιτήματος”.
+    \item Ο χρήστης κλείνει το μήνυμα 
+    \item Εμφανίζεται η λίστα των αιτημάτων ανανεωμένη με το νέο αίτημα.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 1: Ο χρήστης δεν έχει κάνει προηγούμενες αιτήσεις:}
+\begin{enumerate}
+    \item [2.1] Το σύστημα αντιλαμβάνεται ότι o χρήστης δεν έχει κάνει καμία προηγούμενη αίτηση, οπότε εμφανίζεται μια άδεια οθόνη με μοναδικό κουμπί την προσθήκη αίτησης.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης αφαιρεί υπάρχουσα αίτηση:}
+\begin{enumerate}
+    \item [3α.1] Ο χρήστης επιλέγει την επιλογή remove request για μια αίτηση του το οποίο επέλεξε.
+    \item [3α.2] Εμφανίζεται pop up το οποίο τον καλεί να επιβεβαιώσει την επιλογή του.
+    \item [3α.3] Ο χρήστης πατάει ναι.
+    \item [3α.4] Το request διαγράφεται.
+    \item [3α.5] Εμφανίζεται πάλι η οθόνη των requests.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης κάνει edit υπάρχουσα αίτηση:}
+\begin{enumerate}
+    \item [3β.1] Ο χρήστης επιλέγει την επιλογή edit σε κάποια υπάρχουσα αίτηση.
+    \item [3β.2] Εμφανίζεται μια καινούργια οθόνη με τα στοιχεία της αίτησης που επέλεξε.
+    \item [3β.3] Επιλέγει το στοιχείο που θέλει να αλλάξει.
+    \item [3β.4] Εμφανίζεται ένα pop up όπου συμπληρώνει την καινούργια τιμή.
+    \item [3β.5] Πατάει OK.
+    \item [3β.6] Επιστρέφει στην οθόνη με τα στοιχεία.
+    \item [3β.7] Επιλέγει apply.
+    \item [3β.8] Επιστρέφει την οθόνη με τα requests με τα ανανεωμένα στοιχεία.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 4: Το βιβλίο είναι ήδη διαθέσιμο προς ενοικίαση}
+\begin{enumerate}
+    \item[5.1] Το σύστημα βρίσκει ότι βιβλίο το οποίο ο χρήστης αναζητούσε υπάρχει ήδη διαθέσιμο προς ενοικίαση από άλλον χρήστη.
+    \item[5.2] Εμφανίζει στο χρήστη την υπάρχουσα προσφορά με τα στοιχεία της και δυνατότητα ενοικίασης.
+    \item[5.3] Ο χρήστης επιχειρεί την ενοικίαση του βιβλίου.
+    \item[5.4] Το σύστημα μας προχωράει με τη διαδικασία του rent.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 5: Ο χρήσης δεν νοικιάζει το ήδη διαθέσιμο προς ενοικίαση βιβλίο}
+\begin{enumerate}
+    \item [5.3.1] Ο χρήστης απορρίπτει την ενοικίαση του βιβλίου.
+    \item [5.3.2] Επιστρέφει στο βήμα 2 στη βασική ροή.
 \end{enumerate}
 
 \end{document}
